update for receiving an array of ids
