# app/Http/Controllers/Api/UserController.php
@@ -246,53 +246,4 @@ class UserController extends Controller
             'message' => 'Usuario eliminado'
         ], 204);
     }
-
-    /**
-     * @OA\Post(
-     *     path="/api/users/progress",
-     *     summary="Marcar como visto",
-     *     security={{"bearerAuth":{}}},
-     *     tags={"users"},
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(
-     *             required={"user_id", "User_id"},
-     *             @OA\Property(property="User_id", type="integer", example=1),
-     *             @OA\Property(property="user_id", type="integer", example=1),
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=201,
-     *         description="Se ha registrado en un curso"
-     *     ),
-     *     @OA\Response(
-     *         response=422,
-     *         description="Errores de validación",
-     *         @OA\JsonContent(
-     *             type="object",
-     *             example={
-     *                 "message": "The given data was invalid.",
-     *                 "errors": {
-     *                     "title": {
-     *                         "The title field is required."
-     *                     },
-     *                     "description": {
-     *                         "The description must be at least 10 characters."
-     *                     },
-     *                      "created_by": {
-     *                         "The user doesnt exist."
-     *                     }
-     *                 }
-     *             }
-     *         )
-     *     )
-     * )
-     */
-    public function progress(ProgressRequest $request)
-    {
-        UserProgress::create($request->all());
-        return response()->json([
-            'message' => 'Se ha guardado el progreso'
-        ], 201);
-    }
 }
